<resources>
    <string name="app_name">Serenity Space</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="log_in">Log in</string>
    <string name="signup">Don\'t have an account? Sign up</string>
    <string name="guided_meditation">Guided meditation</string>
    <string name="explore_a_vareity_of_guided_meditations">Explore a vareity of guided meditations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recommended">Recommended</string>
    <string name="guided">Guided</string>
    <string name="unguided">Un-guided</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="signin">Already Registerd? Sign in</string>
    <string name="music_name">Music Name</string>
</resources>