<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textbox"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:layout_editor_absoluteX="16dp" />


        <EditText
            android:id="@+id/editTextRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textbox"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textbox"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textbox"
            android:ems="10"
            android:hint="Mobile Number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextRegEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>